--- a/web/foods/templates/foods/base.html
+++ b/web/foods/templates/foods/base.html
@@ -13,39 +13,27 @@
 </head>
 
 <body>
-  <ul class="nav justify-content-center sticky-top dark ">
+  <ul class="nav justify-content-evenly sticky-top dark bg-white">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">{{ user.username }}</a>
+      <a class="nav-link active" aria-current="page" href="{% url 'foods:index' %}">Main Page</a>
+    </li>
+    {% if user.is_authenticated %}
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'accounts:mypage' %}">My page</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">My page</a>
-    </li>
-    <li class="nav-item">
-      {% if user.is_authenticated %}
-      <a href="{% url 'accounts:logout' %}"> log out</a>
-      {% else %}
-      <a href="{% url 'accounts:login' %}"> LogIn</a>
-      <a href="{% url 'accounts:signup' %}"> SignIn</a>
+      <a class="btn btn-outline-dark" href="{% url 'accounts:logout' %}" role="button"> log out</a>
 
-      {% endif %}
     </li>
+    {% endif %}
   </ul>
   <div class="container">
 
-    Hello {{ user.username }}
+
+    {% block mypage %}{% endblock mypage %}
     {% block content %}{% endblock content %}
-    {% if user.is_authenticated %}
-      {% block index %}
-      {% endblock %}
-
-    {% else %}
-      <a href="{% url 'accounts:login' %}"> LogIn</a>
-      <a href="{% url 'accounts:signup' %}"> SignIn</a>
-
-    {% endif %}
-
-
-
+    {% block index %}{% endblock index %}
+  {% block ingredient %}{% endblock ingredient %}
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
