--- a/web/foods/templates/foods/index.html
+++ b/web/foods/templates/foods/index.html
@@ -42,13 +42,13 @@
 <br>
 <br>
 <div class="d-flex justify-content-around">
-  <h1>로그인이 필요한 페이지 입니다.</h1>
+  <h1>로그인이 필요한 서비스입니다.</h1>
 </div>
 <div class="d-flex justify-content-around">
   <a href="{% url 'accounts:login' %}" class="btn btn-primary btn-lg btn-block active" role="button"
     aria-pressed="true">Log In</a>
   <a href="{% url 'accounts:signup' %}" class="btn btn-secondary btn-lg btn-block active" role="button"
-    aria-pressed="true">Sig In</a>
+    aria-pressed="true">Sig Up</a>
 </div>
 
 
