--- a/web/foods/templates/foods/_modal_create.html
+++ b/web/foods/templates/foods/_modal_create.html
@@ -1,7 +1,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Food Image Upload</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <form action="{% url 'foods:create' %}" method="POST" enctype="multipart/form-data">
